--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -177,7 +177,8 @@ aside {
   .filter-item {
     display: inline-block;
     vertical-align: middle;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
+    width: 200px;
   }
 }
 
