--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -181,6 +181,12 @@ aside {
     width: 200px;
   }
 }
+.el-tree-node__label{
+  padding: 0 5px;
+}
+.el-tree-node__content > .el-tree-node__expand-icon{
+  padding: 0 3px;
+}
 
 //refine vue-multiselect plugin
 .multiselect {
